--- a/src/main/webapp/resources/css/minihome/setting.css
+++ b/src/main/webapp/resources/css/minihome/setting.css
@@ -224,7 +224,7 @@ th {
 	border-bottom: 2px solid #ff9933;
 	height: 50px;
 	font-weight: bold;
-	font-size : 16px;
+	font-size : 14px;
 }
 
 .bgm-grid {
@@ -240,7 +240,7 @@ th {
 
 .bgm-list {
 	border-bottom: 1px solid #ff9933;
-	font-size : 14px;
+	font-size : 12px;
 }
 
 .bgm-list:hover {
@@ -251,4 +251,14 @@ th {
 .bgm-list-delete
 ,.bgm-list-add{
 	margin-top : 10px;
+}
+
+.bgm-myList{
+	margin-top : 20px;
+}
+
+#divDivideLine{
+	width : 100%;
+	border-top : 1px solid darkgrey;
+	margin-top : 20px;
 }
